full-moon/tests/roblox_cases/fail/parser/type_table_no_right_brace/source.lua
type Foo = { x: string, y: string

local x = 1